--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
     <!--NAVBAR-------------------------------------------------->
     <nav class="navbar navbar-expand-md navbar-light" style="background-color: #75a9fa;">
-  <a class="navbar-brand" href="index.html"><img src="Assets/logo.png" alt="Logo" style="width: 160px"></a>
+  <a class="navbar-brand" href="index.html"><img src="assets/logo.png" alt="Logo" style="width: 160px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -35,40 +35,30 @@
     <!--NAVBAR END---------->
    
     <!--MAIN-->
-<div class="row row-cols-1 row-cols-md-4">
-  <div class="col mb-4">
-    <div class="card h-100">
-      <img src="assets/vinyl/technopop.webp" class="card-img-top" alt="Music-Non Stop! Techno Pop!">
 
+<div class="container d-flex"> 
+    <div class="col-mb-4">
+      <img src="assets/recordstore.jpg" class="card-img-top" alt="Record Store">
     </div>
-  </div>
-  <div class="col mb-4">
-    <div class="card h-100">
-      <div class="card-body">
-        <h5 class="card-title">Who are we?</h5>
-        <p class="card-text">We are a businesses that deals in the sale of music. This means that</p>
-        <button type="submit" class="btn btn-success">Buy Now!</button>
-      </div>
+    <div class="col-mb-8">
+        <h5>Who are we?</h5>
+        <p>We are a businesses that deals in the sale of music. This means that we have all sorts of audio formats available for purchase, ranging from CDs, Cassettes and Vinyls!</p>
     </div>
-  </div>
-  <br>
-  <div class="col mb-4">
-    <div class="card h-100">
-      <img src="assets/vinyl/vanhalen.jpg" class="card-img-top" alt="Van Halen">
+</div>
 
+<br>
+<br>
+
+<div class="container d-flex"> 
+    <div class="col-mb-8">
+        <h5>What do we do?</h5>
+        <p>We provide nothing but music, music and more music for everyone across the UK & Ireland! We have over 400+ artists in our roster, ranging from big names in music to more smaller, niche artists you may not of heard of! There's something for everyone here at Music Non-Stop!</p>
     </div>
-  </div>
-  <div class="col mb-4">
-    <div class="card h-100">
-      <div class="card-body">
-        <h5 class="card-title">Rock hits!</h5>
-        <p class="card-text">Considered one of the greatest debut albums of all time, Van Halen electrifies the audience with his out-of-this-world guitar playing skills! Now available on Vinyl & CD!</p>
-        <button type="submit" class="btn btn-success">Buy Now!</button>
-      </div>
+    <div class="col-mb-4">
+      <img src="assets/recordstore2.jpg"  class="card-img-top" alt="A black person checking out our catalogue of music.">
     </div>
   </div>
 </div>
-
 <!--MAIN END-->
 
 <!--FOOTER-->
