--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
 
     <!--NAVBAR-------------------------------------------------->
     <nav class="navbar navbar-expand-md navbar-light" style="background-color: #75a9fa;">
-  <a class="navbar-brand" href="index.html"><img src="Assets/logo.png" alt="Logo" style="width:160px"></a>
+  <a class="navbar-brand" href="index.html"><img src="assets/logo.png" alt="Logo" style="width:160px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,12 +37,34 @@
     <!--MAIN-->
 <div class="container">
   <h3>Products</h3>
-  <div class="row row-cols-1 row-cols-md-4">
+  
+<!-- Tabs -->
+<div class="container">
+  <h2>Toggleable Tabs</h2>
+  <br>
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="tab" href="#home">Rock & Metal</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#menu1">Electronic</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#menu2">Pop</a>
+    </li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div id="home" class="container tab-pane active"><br>
+      <h3>Rock & Metal</h3>
+<div class="row row-cols-1 row-cols-md-4">
   <div class="col mb-4">
     <div class="card h-100">
-      <img src="assets/vinyl/aceofspades.webp" class="card-img-top" alt="Motorhead - Ace Of Spades" style="height: 225px">
+      <img src="assets/vinyl/aceofspades.webp" class="card-img-top" alt="Motörhead - Ace Of Spades" style="height: 225px">
       <div class="card-body">
-        <h5 class="card-title">Motorhead - Ace of Spades</h5>
+        <h5 class="card-title">Motörhead - Ace of Spades</h5>
         <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Sanctuary Records</p>
         <button type="submit" class="btn btn-success">Buy</button>
       </div>
@@ -50,17 +72,17 @@
   </div>
   <div class="col mb-4">
     <div class="card h-100">
-      <img src="Assets/vinyl/rio.webp" class="card-img-top" alt="Duran Duran - Rio" style="height: 225px">
+      <img src="assets/vinyl/FWTBT.webp" class="card-img-top" alt="Metallica - Ride the Lightning" style="height: 225px">
       <div class="card-body">
-        <h5 class="card-title">Duran Duran - Rio</h5>
-        <p class="card-text">Available formats: CD, Vinyl, Cassette<br><br>Label: Parlophone</p>
+        <h5 class="card-title">Metallica - Ride the Lightning</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Blackened</p>
         <button type="submit" class="btn btn-success">Buy</button>
       </div>
     </div>
   </div>
   <div class="col mb-4">
     <div class="card h-100">
-      <img src="Assets/vinyl/Rebelyell.webp" class="card-img-top" alt="Aristotle" style="height: 225px">
+      <img src="assets/vinyl/Rebelyell.webp" class="card-img-top" alt="Billy Idol - Rebel Yell" style="height: 225px">
       <div class="card-body">
         <h5 class="card-title">Billy Idol - Rebel Yell</h5>
         <p class="card-text">Available formats: CD, Vinyl, Cassette<br><br>Label: Capitol</p>
@@ -70,37 +92,37 @@
   </div>
   <div class="col mb-4">
     <div class="card h-100">
-      <img src="Assets/vinyl/privatecollection.jpg" class="card-img-top" alt="René Descartes" style="height: 225px">
+      <img src="assets/vinyl/drfeelgood.webp" class="card-img-top" alt="Motley Crue - Dr. Feelgood" style="height: 225px">
       <div class="card-body">
-        <h5 class="card-title">Jon and Vangelis - Private Collection</h5>
-        <p class="card-text">Available formats: CD<br><br>Label: Polydor</p>
+        <h5 class="card-title">Motley Crue - Dr. Feelgood</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: BMG</p>
         <button type="submit" class="btn btn-success">Buy</button>
       </div>
     </div>
   </div>
    <div class="col mb-4">
     <div class="card h-100">
-      <img src="Assets/vinyl/neworder.webp" class="card-img-top" alt="René Descartes" style="height: 225px">
+      <img src="assets/vinyl/hysteria.jpg" class="card-img-top" alt="Def Leppard - Hysteria" style="height: 225px">
       <div class="card-body">
-        <h5 class="card-title">New Order - Power, Corruption and Lies</h5>
-        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Warner Music</p>
+        <h5 class="card-title">Def Leppard - Hysteria</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Mercury</p>
         <button type="submit" class="btn btn-success">Buy</button>
       </div>
     </div>
   </div>
    <div class="col mb-4">
     <div class="card h-100">
-      <img src="Assets/vinyl/TEE.webp" class="card-img-top" alt="René Descartes" style="height: 225px">
+      <img src="assets/vinyl/eliminator.webp" class="card-img-top" alt="ZZ Top - Eliminator" style="height: 225px">
       <div class="card-body">
-        <h5 class="card-title">Kraftwerk - Trans Europe Express</h5>
-        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Parlophone</p>
+        <h5 class="card-title">ZZ Top - Eliminator</h5>
+        <p class="card-text">Available formats: CD<br><br>Label: Warner Bros.</p>
         <button type="submit" class="btn btn-success">Buy</button>
       </div>
     </div>
   </div>
    <div class="col mb-4">
     <div class="card h-100">
-      <img src="Assets/vinyl/Paranoid.webp" class="card-img-top" alt="René Descartes" style="height: 225px">
+      <img src="assets/vinyl/Paranoid.webp" class="card-img-top" alt="Black Sabbath - Paranoid" style="height: 225px">
       <div class="card-body">
         <h5 class="card-title">Black Sabbath - Paranoid</h5>
         <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Sanctuary Records</p>
@@ -110,7 +132,91 @@
   </div>
    <div class="col mb-4">
     <div class="card h-100">
-      <img src="Assets/vinyl/prodigy.webp" class="card-img-top" alt="René Descartes" style="height: 225px">
+      <img src="assets/vinyl/vanhalen.jpg" class="card-img-top" alt="Van Halen - Van Halen" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Van Halen - Van Halen</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Warner Bros.</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+</div>    </div>
+    <div id="menu1" class="container tab-pane fade"><br>
+      <h3>Electronic</h3>
+      <div class="row row-cols-1 row-cols-md-4">
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/Discovery.webp" class="card-img-top" alt="Motörhead - Ace Of Spades" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Daft Punk - Discovery</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Warner Music</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/SAW.webp" class="card-img-top" alt="Duran Duran - Rio" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Aphex Twin - Selected Ambient Works 85-92</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Apollo</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/visage.jpg" class="card-img-top" alt="Billy Idol - Rebel Yell" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Visage - Visage</h5>
+        <p class="card-text">Available formats: CD<br><br>Label: Polydor</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/privatecollection.jpg" class="card-img-top" alt="Jon and Vangelis - Private Collection" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Jon and Vangelis - Private Collection</h5>
+        <p class="card-text">Available formats: CD<br><br>Label: Polydor</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+   <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/neworder.webp" class="card-img-top" alt="New Order - Power, Corruption and Lies" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">New Order - Power, Corruption and Lies</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Warner Music</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+   <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/TEE.webp" class="card-img-top" alt="Kraftwerk - Trans Europe Express" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Kraftwerk - Trans Europe Express</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Parlophone</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+   <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/MM.webp" class="card-img-top" alt="Kraftwerk - The Man-Machine" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Kraftwerk - The Man-Machine</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Parlophone</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+   <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/prodigy.webp" class="card-img-top" alt="The Prodigy - The Fat of the Land" style="height: 225px">
       <div class="card-body">
         <h5 class="card-title">The Prodigy - The Fat of the Land</h5>
         <p class="card-text">Available formats: CD, Vinyl<br><br>Label: XL Recordings</p>
@@ -119,11 +225,105 @@
     </div>
   </div>
 </div>
+    </div>
+    <div id="menu2" class="container tab-pane fade"><br>
+      <h3>Pop</h3>
+      <div class="row row-cols-1 row-cols-md-4">
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/1999.webp" class="card-img-top" alt="Duran Duran - Rio" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Prince - 1999</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: NPG</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/rio.webp" class="card-img-top" alt="Duran Duran - Rio" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Duran Duran - Rio</h5>
+        <p class="card-text">Available formats: CD, Vinyl, Cassette<br><br>Label: Parlophone</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/LookSharp.webp" class="card-img-top" alt="Roxette - Look Sharp!" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Roxette - Look Sharp!</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Parlophone</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/rumours.webp" class="card-img-top" alt="Fleetwood Mac - Rumours" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Fleetwood Mac - Rumours</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Warner Bros.</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+   <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/seriously.webp" class="card-img-top" alt="Phil Collins - ...But Seriously" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Phil Collins - ...But Seriously</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Atlantic</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+   <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/violator.webp" class="card-img-top" alt="Depeche Mode - Violator" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Depeche Mode - Violator</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Mute</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+   <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/very.webp" class="card-img-top" alt="Pet Shop Boys - Very" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Pet Shop Boys - Very</h5>
+        <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Parlophone</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+   <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/vinyl/kdith.jpg" class="card-img-top" alt="Starship - Knee Deep In The Hopla" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Starship - Knee Deep In The Hopla</h5>
+        <p class="card-text">Available formats: CD<br><br>Label: Grunt</p>
+        <button type="submit" class="btn btn-success">Buy</button>
+      </div>
+    </div>
+  </div>
+</div>
+    </div>
+  </div>
+</div>
+
+<!-- Tab End -->
+
+
+
+  
 </div>
 <!--MAIN END-->
 
 <!--FOOTER-->
-<footer class="container-fluid fixed-bottom text-center text-black py-3 mt-auto" style="background-color: #75a9fa;">
+<footer class="container-fluid text-center text-black py-3" style="background-color: #75a9fa;">
     <h3>Footer</h3>
     <div class="container">
         <div class="row">
