--- a/service.html
+++ b/service.html
@@ -14,7 +14,7 @@
 
     <!--NAVBAR-------------------------------------------------->
    <nav class="navbar navbar-expand-md navbar-light" style="background-color: #75a9fa;">
-  <a class="navbar-brand" href="index.html"><img src="Assets/logo.png" alt="Logo" style="width:160px"></a>
+  <a class="navbar-brand" href="index.html"><img src="assets/logo.png" alt="Logo" style="width:160px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,43 +37,62 @@
     <!--MAIN-->
 
      <div class="container">
-  <h3>Interests</h2>
-  <p><strong>Note:</strong> The <strong>data-parent</strong> attribute makes sure that all collapsible elements under the specified parent will be closed when one of the collapsible item is shown.</p>
+  <h3>Services</h2>
   <div id="accordion">
     <div class="card">
       <div class="card-header">
         <a class="card-link" data-toggle="collapse" href="#collapseOne">
-          Music
+          What kinds of music do you sell?
         </a>
       </div>
       <div id="collapseOne" class="collapse show" data-parent="#accordion">
         <div class="card-body">
-          My favourite bands/artists are Motorhead, Van Halen, Def Leppard, Ultravox, Vangelis, Aphex Twin, Orchestral Manoeuvres in the Dark, Kraftwerk<br><br>
-          My favourite songs are Fade to Grey by Visage, Runnin' with the Devil by Van Halen, Teenage Dirtbag by Wheatus, And When The Night Comes from Jon and Vangelis, Souvenir from OMD, Vienna from Ultravox and Europe Endless from Kraftwerk.
+          <div class="container d-flex"> 
+  
+    <div class="col-mb-8">
+        <p>We sell various amounts of music across different categories, whenever it's rock legends ranging from Motorhead, Metallica and Black Sabbath to more electronic-oriented artists like Kraftwerk, New Order and much more! There's plenty of variety at Music Non-Stop!</p>
+    </div>
+      <div class="col-mb-4">
+      <img src="assets/recordstore.jpg" class="card-img-top" alt="Record Store">
+    </div>
+</div>
+          
         </div>
       </div>
     </div>
     <div class="card">
       <div class="card-header">
         <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
-        PC Gaming
+        Do you do rentals of certain albums?
       </a>
       </div>
       <div id="collapseTwo" class="collapse" data-parent="#accordion">
         <div class="card-body">
-          I often play old games either from a disc image, Steam or a GOG.com release. So far, I have played stealth games such as MGSV: The Phantom Pain & Splinter Cell, platformers such as the Klonoa series, point-and-click adventures such as the Sierra and Lucasarts series of games and some FPS games such as F.E.A.R, Half-Life and the Far Cry series
+          Of course! You can head into one of our physical stores that are near your local area or book a rental directly through our contact form. We will get you as soon as possible.
         </div>
       </div>
     </div>
     <div class="card">
       <div class="card-header">
         <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
-          Movies
+          How long does delivery take?
         </a>
       </div>
       <div id="collapseThree" class="collapse" data-parent="#accordion">
         <div class="card-body">
-          My favourite movie is Escape From New York by John Carpenter, but I do like other movies such as Fantastic Mr. Fox, Blade Runner, The Bad Guys duology, Alien and Robocop.
+          Depending on the popularity of the product and other contributing factors, It can take up to 2-6 business days for your package to arrive. You may also alternatively use collection instead if you live next to your nearby store.
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <a class="collapsed card-link" data-toggle="collapse" href="#collapseFour">
+          Which payment options are available?
+        </a>
+      </div>
+      <div id="collapseFour" class="collapse" data-parent="#accordion">
+        <div class="card-body">
+          You can use credit/debit cards or PayPal for online purchases made here. Also, you can pay cash upfront at our stores or use the cards mentioned at our tills.
         </div>
       </div>
     </div>
