--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="title" content="Music Non-Stop">
+    <meta name="description" content="Music Non-Stop, A business that deals in Vinyl, CDs, Cassettes and other audio formats">
+    <meta name="keywords" content="Music, Vinyl, CD, Cassette, Singles, Albums">
+
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -14,7 +19,7 @@
 
     <!--NAVBAR-------------------------------------------------->
     <nav class="navbar navbar-expand-md navbar-light" style="background-color: #75a9fa;">
-  <a class="navbar-brand" href="index.html"><img src="Assets/logo.png" alt="Logo" style="width: 160px"></a>
+  <a class="navbar-brand" href="index.html"><img src="assets/logo.png" alt="Logo" style="width: 160px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,9 +42,8 @@
     <!--MAIN-->
 
      <div class="container" style="flex: 2;">
-<h3>CONTACT FORM</h3>
 <hr>
-<h3 class="text-center">Contact Me Form</h3>
+<h3 class="text-center">Contact Us Form</h3>
 <hr>
 <div class="container-fluid d-flex justify-content-center">
 <form id="myForm" style="width: 450px;" class="was-validated" onsubmit="myFormSubmits (event)">
@@ -87,7 +91,7 @@
 
 <!-- Upload CV -->
 <div class="form-group">
-<label for="uploadFict">Upload a piece of ficton...</label>
+<label for="uploadFict">Upload an image</label>
 <small class="text-muted">* OPTIONAL</small>
 <input type="file" class="form-control-file" id="uploadFict" name="File Upload "> </div>
 
@@ -98,10 +102,11 @@
 </div>
 </form>
 </div>
+</div>
 <!--MAIN END-->
 
 <!--FOOTER-->
-<footer class="fixed-bottom text-center text-black py-3" style="background-color: #75a9fa;">
+<footer class="container-fluid text-center text-black py-3" style="background-color: #75a9fa;">
     <h3>Footer</h3>
     <div class="container">
         <div class="row">
@@ -118,6 +123,10 @@
     </div>
 </footer>
 <!--FOOTER END-->
+
+<!--- CUSTOM SCRIPTING FILE -->
+<script src="js/formscript.js"></script>
+<!--CUSTOM SCRIPTING FILE END-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
