--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!--NAVBAR-------------------------------------------------->
     <nav class="navbar navbar-expand-md navbar-light" style="background-color: #75a9fa;">
-  <a class="navbar-brand" href="index.html"><img src="Assets/logo.png" alt="Logo" style="width:160px"></a>
+  <a class="navbar-brand" href="index.html"><img src="assets/logo.png" alt="Logo" style="width:160px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,7 +36,7 @@
    
     <!--MAIN-->
 
-    <div class="container">
+  <div class="container">
   <h3>Welcome to Music Non-Stop!</h3>
   <div id="demo" class="carousel slide" data-ride="carousel">
 
@@ -108,10 +108,11 @@
     </div>
   </div>
 </div>
+</div>
 <!--MAIN END-->
 
 <!--FOOTER-->
-<footer class="fixed-bottom text-center text-black py-3" style="background-color: #75a9fa;">
+<footer class="container-fluid text-center text-black py-3" style="background-color: #75a9fa;">
     <h3>Footer</h3>
     <div class="container">
         <div class="row">
