--- a/team.html
+++ b/team.html
@@ -14,7 +14,7 @@
 
     <!--NAVBAR-------------------------------------------------->
     <nav class="navbar navbar-expand-md navbar-light" style="background-color: #75a9fa;">
-  <a class="navbar-brand" href="index.html"><img src="Assets/logo.png" alt="Logo" style="width:160px"></a>
+  <a class="navbar-brand" href="index.html"><img src="assets/logo.png" alt="Logo" style="width:160px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -35,38 +35,51 @@
     <!--NAVBAR END---------->
    
     <!--MAIN-->
-<div class="container">
-  <h2>Meet the Team</h2>
-  <p>Image at the top (card-img-top):</p>
-  <div class="card" style="width:400px">
-    <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
-    <div class="card-body">
-      <h4 class="card-title">Sean Harris</h4>
-      <p class="card-text">Founder and chairman of Music Non-Stop Ltd. He has a passion for music and is the man who deals with the more business-related stuff of the company.</p>
-      <a href="#" class="btn btn-primary">See Profile</a>
+    <div class="container">
+  <h3>Meet the Team</h3>
+  <div class="row row-cols-1 row-cols-md-4">
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/person.png" class="card-img-top" alt="Sean Harris" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Sean Harris</h5>
+        <p class="card-text">Founder and chairman of Music Non-Stop Ltd. He has a passion for music and is the man who deals with the more business-related stuff of the company.</p>
+        <a href="#" class="btn btn-primary">See Profile</a>
+      </div>
     </div>
   </div>
-  <br>
-  
-  <p>Image at the bottom (card-img-bottom):</p>
-  <div class="card" style="width:400px">
-    <div class="card-body">
-      <h4 class="card-title">Katie Faulkner</h4>
-      <p class="card-text">Co-founder of Music Non Stop. </p>
-      <a href="#" class="btn btn-primary">See Profile</a>
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/person2.jpg" class="card-img-top" alt="Katie Faulkner" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Katie Faulkner</h5>
+        <p class="card-text">Co-founder of Music Non Stop Ltd. She's responsible for the management of the various stores across the country and helps bring more great ideas for the store.</p>
+        <a href="#" class="btn btn-primary">See Profile</a>
+      </div>
     </div>
-    <img class="card-img-bottom" src="img_avatar6.png" alt="Card image" style="width:100%">
   </div>
-</div>
-<div class="card" style="width:400px">
-    <div class="card-body">
-      <h4 class="card-title">Katie Faulkner</h4>
-      <p class="card-text">Co-founder of Music Non Stop. </p>
-      <a href="#" class="btn btn-primary">See Profile</a>
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/person3.jpg" class="card-img-top" alt="Steven Kilmister" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">Steven Kilmister</h5>
+        <p class="card-text">The poster boy in our operations and the one in which you've seen our commercials on the TV before. He is the face of the brand and is responsible for the creation of our advertising division.</p>
+        <a href="#" class="btn btn-primary">See Profile</a>
+      </div>
     </div>
-    <img class="card-img-bottom" src="img_avatar6.png" alt="Card image" style="width:100%">
   </div>
-</div>
+  <div class="col mb-4">
+    <div class="card h-100">
+      <img src="assets/person4.jpg" class="card-img-top" alt="David McGuiness" style="height: 225px">
+      <div class="card-body">
+        <h5 class="card-title">David McGuiness</h5>
+        <p class="card-text">The newest person to come into our team, he will be in charge of our customer services and support divisions, which will help you with products issues or concerns.</p>
+        <a href="#" class="btn btn-primary">See Profile</a>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
 <!--MAIN END-->
 
 <!--FOOTER-->
