--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <div class="col-mb-4">
       <img src="assets/recordstore.jpg" class="card-img-top" alt="Record Store">
     </div>
-    <div class="col-mb-8">
+    <div class="col-mb-8" style="padding-left: 30px;">
         <h5>Who are we?</h5>
         <p>We are a businesses that deals in the sale of music. This means that we have all sorts of audio formats available for purchase, ranging from CDs, Cassettes and Vinyls!</p>
     </div>
@@ -63,7 +63,6 @@
 
 <!--FOOTER-->
 <footer class="fixed-bottom text-center text-black py-3" style="background-color: #75a9fa;">
-    <h3>Footer</h3>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
