--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="Assets/vinylicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Music Non-Stop</title>
   </head>
   <body>
@@ -62,7 +63,7 @@
 <div class="row row-cols-1 row-cols-md-4">
   <div class="col mb-4">
     <div class="card h-100">
-      <img src="assets/vinyl/aceofspades.webp" class="card-img-top" alt="Motörhead - Ace Of Spades" style="height: 225px">
+      <img src="assets/vinyl/aceofspades.webp" class="card-img-top" alt="Motörhead - Ace Of Spades">
       <div class="card-body">
         <h5 class="card-title">Motörhead - Ace of Spades</h5>
         <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Sanctuary Records</p>
@@ -72,7 +73,7 @@
   </div>
   <div class="col mb-4">
     <div class="card h-100">
-      <img src="assets/vinyl/FWTBT.webp" class="card-img-top" alt="Metallica - Ride the Lightning" style="height: 225px">
+      <img src="assets/vinyl/FWTBT.webp" class="card-img-top" alt="Metallica - Ride the Lightning">
       <div class="card-body">
         <h5 class="card-title">Metallica - Ride the Lightning</h5>
         <p class="card-text">Available formats: CD, Vinyl<br><br>Label: Blackened</p>
@@ -324,7 +325,6 @@
 
 <!--FOOTER-->
 <footer class="container-fluid text-center text-black py-3" style="background-color: #75a9fa;">
-    <h3>Footer</h3>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
