--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--MAIN-->
 
   <div class="container">
-  <h3>Welcome to Music Non-Stop!</h3>
+  <h3>Welcome to Music Non-Stop! This is the home page!</h3>
   <div id="demo" class="carousel slide" data-ride="carousel">
 
   <!-- Indicators -->
@@ -113,7 +113,6 @@
 
 <!--FOOTER-->
 <footer class="container-fluid text-center text-black py-3" style="background-color: #75a9fa;">
-    <h3>Footer</h3>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
