--- a/team.html
+++ b/team.html
@@ -44,7 +44,7 @@
       <div class="card-body">
         <h5 class="card-title">Sean Harris</h5>
         <p class="card-text">Founder and chairman of Music Non-Stop Ltd. He has a passion for music and is the man who deals with the more business-related stuff of the company.</p>
-        <a href="#" class="btn btn-primary">See Profile</a>
+        <a href="#" class="btn btn-primary" style="display: flex; justify-content: center; align-items: center;">See Profile</a>
       </div>
     </div>
   </div>
@@ -54,7 +54,7 @@
       <div class="card-body">
         <h5 class="card-title">Katie Faulkner</h5>
         <p class="card-text">Co-founder of Music Non Stop Ltd. She's responsible for the management of the various stores across the country and helps bring more great ideas for the store.</p>
-        <a href="#" class="btn btn-primary">See Profile</a>
+        <a href="#" class="btn btn-primary" style="display: flex; justify-content: center; align-items: center;">See Profile</a>
       </div>
     </div>
   </div>
@@ -64,7 +64,7 @@
       <div class="card-body">
         <h5 class="card-title">Steven Kilmister</h5>
         <p class="card-text">The poster boy in our operations and the one in which you've seen our commercials on the TV before. He is the face of the brand and is responsible for the creation of our advertising division.</p>
-        <a href="#" class="btn btn-primary">See Profile</a>
+        <a href="#" class="btn btn-primary" style="display: flex; justify-content: center; align-items: center;">See Profile</a>
       </div>
     </div>
   </div>
@@ -74,7 +74,7 @@
       <div class="card-body">
         <h5 class="card-title">David McGuiness</h5>
         <p class="card-text">The newest person to come into our team, he will be in charge of our customer services and support divisions, which will help you with products issues or concerns.</p>
-        <a href="#" class="btn btn-primary">See Profile</a>
+        <a href="#" class="btn btn-primary" style="display: flex; justify-content: center; align-items: center;">See Profile</a>
       </div>
     </div>
   </div>
@@ -84,7 +84,6 @@
 
 <!--FOOTER-->
 <footer class="fixed-bottom text-center text-black py-3" style="background-color: #75a9fa;">
-    <h3>Footer</h3>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
